# ArtApp

./: CMakeLists.txt  CMakeSettings.json  README.md  untitled.ui
Animation/: PlaybackEngine.h
src/: main.cpp
src/App/: MainWindow.cpp  MainWindow.h  MainWindow.ui
src/Core/: Canvas.cpp  Canvas.h  Layer.h
src/Tools/: Brush.cpp  Brush.h
ui/: MainWindow.ui
